# edof

./: .gitignore  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  edof_cli.py  edof_editor.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: docs.yml  publish.yml
INSTALL/: index.html
QUICKSTART/: index.html
advanced/extending/: index.html
advanced/file-format/: index.html
advanced/troubleshooting/: index.html
cookbook/batch-pdf/: index.html
cookbook/certificate/: index.html
cookbook/effects-poster/: index.html
cookbook/encrypted-template/: index.html
cookbook/invoice/: index.html
cookbook/pdf-import-edit/: index.html
docs/: INSTALL.md  QUICKSTART.md  README.md  _gen_api.py
docs/advanced/: extending.md  file-format.md  troubleshooting.md
docs/cookbook/: batch-pdf.md  certificate.md  effects-poster.md  encrypted-template.md  invoice.md  pdf-import-edit.md
docs/reference/: 01-document.md  02-objects.md  03-styles.md  04-variables.md  05-export.md  06-import.md  07-encryption.md  08-editor.md  09-cli.md  10-helpers.md  11-docx.md  12-effects.md  API.md
editor_lang/: en.json
edof/: __init__.py  exceptions.py  units.py  version.py
edof/_apps/: _assoc_dialog.py  cli.py  editor.py  edof_text_editor.py  file_assoc.py  shortcuts.py  viewer.py
edof/_apps/assets/: __init__.py
edof/_apps/assets/cursors/: cursors.json
edof/_apps/assets/icons/: __init__.py  edof-document.icns  edof-editor.icns  edof-viewer.icns
edof/_apps/assets/ui_icons/: icons.json
edof/api/: commands.py
edof/crypto/: __init__.py  document_protection.py  encryption.py  permissions.py
edof/editor_lang/: en.json
edof/engine/: color.py  debug_log.py  document_flow.py  document_paginate.py  gpu.py  renderer.py  text_engine.py  text_layout.py  textbox_flow.py  transform.py
edof/export/: bitmap.py  legacy_v3.py  pdf.py  pdf_writer.py  printer.py  svg.py
edof/format/: document.py  document_body.py  document_boxes.py  objects.py  serializer.py  styles.py  svg_io.py  variables.py
edof/gui/: pyqt6_widget.py  tkinter_canvas.py
edof/interop/: __init__.py  docx_io.py
edof/utils/: __init__.py  compat.py  legacy_v2.py  pdf_import.py  qr.py  rtf.py  safe_eval.py
examples/: 01_hello_document.py  02_table_and_rich_text.py  03_vector_gradients.py  04_layer_effects.py  05_variables_template.py  06_save_load_roundtrip.py  README.md
reference/01-document/: index.html
reference/02-objects/: index.html
reference/03-styles/: index.html
reference/04-variables/: index.html
reference/05-export/: index.html
reference/06-import/: index.html
reference/07-encryption/: index.html
reference/08-editor/: index.html
reference/09-cli/: index.html
reference/10-helpers/: index.html
reference/11-docx/: index.html
reference/12-effects/: index.html
reference/API/: index.html
search/: search_index.json
tests/: test_document.py  test_transform.py  test_v310.py  test_v400.py  test_v401.py  test_v402.py  test_v403.py  test_v410.py
