[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "edof"
version         = "4.2.0"
description     = "Easy Document Format – programmatic document creation, editing and export with vector PDF, rich text, tables and PDF import"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"
keywords        = ["document", "format", "pdf", "svg", "template", "edof", "print", "vector"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Pillow>=9.1",
]

[project.optional-dependencies]
# Vector PDF export is built-in (no extra deps).
# 'pdf' extra now adds:
#   - pymupdf for PDF import
#   - pdfplumber for optional table detection in PDF import
#   - reportlab for legacy raster PDF fallback (vector=False mode)
pdf    = ["pymupdf>=1.23", "pdfplumber>=0.10", "reportlab>=4.0"]
qr     = ["qrcode[pil]>=7.4"]
pyqt6  = ["PyQt6>=6.6"]
# v4.1.1: viewer (read-only .edof viewer, lightweight standalone)
viewer = ["PyQt6>=6.6"]
# v4.0.1: AES-256 encryption, multi-level passwords, recovery keys
crypto = ["cryptography>=42.0"]
# v4.1.24.0: Word (.docx) import/export
docx   = ["python-docx>=1.1"]
all    = [
    "pymupdf>=1.23", "pdfplumber>=0.10", "reportlab>=4.0",
    "qrcode[pil]>=7.4", "PyQt6>=6.6", "cryptography>=42.0",
    "python-docx>=1.1",
]
dev    = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy", "build", "twine"]

[project.urls]
Homepage      = "https://github.com/DavidSchobl/edof"
Documentation = "https://davidschobl.github.io/edof/"
Repository    = "https://github.com/DavidSchobl/edof"
"Bug Tracker" = "https://github.com/DavidSchobl/edof/issues"
Changelog     = "https://github.com/DavidSchobl/edof/blob/main/CHANGELOG.md"
Funding       = "https://github.com/sponsors/DavidSchobl"

[tool.setuptools.packages.find]
where   = ["."]
include = ["edof*"]

[tool.setuptools.package-data]
edof = ["py.typed", "editor_lang/*.json"]

[tool.black]
line-length    = 100
target-version = ["py39","py310","py311","py312","py313"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "W", "I"]

[tool.mypy]
python_version         = "3.9"
strict                 = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["edof"]

[project.scripts]
edof-editor = "edof._apps.editor:main"
edof-viewer = "edof._apps.viewer:main"
edof-cli    = "edof._apps.cli:main"
